# rader-v3t

./: .env  .eslintrc.js  .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.eslint.json  tsconfig.json  vite.config.ts  vue.config.ts
backend/: README.md
backend/app/: pyproject.toml
backend/app/api/: models.py  stats.py
backend/app/app/: backend_pre_start.py  config.py  init_data.py  main.py
backend/app/app/api/: api.py  stats.py
backend/app/app/api/endpoints/: users.py
backend/app/app/core/: config.py
backend/app/app/crud/: crud.py  crud_base.py  user_crud.py
backend/app/app/db/: base.py  database.py  init_db.py
backend/app/app/models/: models.py
backend/app/app/schemas/: schemas.py  user_schema.py
frontend/: .eslintrc.js  .gitignore  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  env.d.ts  env.ts  main.ts  shims.d.ts
frontend/src/components/: HomePage.vue  SiteHeader.vue
frontend/src/directives/: index.ts
frontend/src/pages/: Account.vue  Home.vue  LandingPage.vue
frontend/src/plugins/: dark-theme.ts  vuetify.ts
frontend/src/router/: app-router.ts
frontend/src/styles/: variables.scss
src/: App.vue  env.d.ts  env.ts  main.ts
src/components/: HomePage.vue  SettingsDrawer.vue  SiteHeader.vue
src/components/account/: UserCard.vue
src/components/login-register/: LoginForm.vue  RegisterForm.vue
src/directives/: index.ts
src/models/: user-model.ts
src/pages/: Account.vue  Home.vue  LandingPage.vue  SignInRegister.vue
src/plugins/: vuetify.ts
src/plugins/vuetify/: dark-theme.ts  light-theme.ts  vuetify.ts
src/router/: app-router.ts
src/services/: firebase.ts
src/stores/: user-store.ts
src/styles/: index.scss  variables.scss
(+16 files in other folders)
