[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["John Rader"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.72.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.29"
psycopg2-binary = "^2.8.5"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
mypy = "^0.931"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
